Part of fix for bug 45210: style contexts had the wrong parent because the frames were reparented but their style contexts were not. r=rods@netscape.com